<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.spredtrum.blueplore.MainActivity" >

    <item
        android:id="@+id/section1_action_ble_scan_start"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="@string/action_ble_scan_start"/>
    <item
        android:id="@+id/section1_action_ble_scan_stop"
        android:orderInCategory="11"
        android:showAsAction="never"
        android:title="@string/action_ble_scan_stop"/>
    
    <item
        android:id="@+id/action_bt_adapter"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_bt_adapter"/>
    
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/action_exit"/>

</menu>